<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Bernard Bou
  -->

<resources>

	<!-- app -->
	<string name="semantikos">Semantikos</string>>
	<string name="semantikos_greek">σημαντικός</string>>
	<string name="semantikos_latin">significans</string>>
	<string name="app_name">@string/semantikos</string>
	<string name="app_subname">@null</string>

	<!-- databases -->
	<string name="sqlunet">SqlUNet</string>
	<string name="sqlunet2">Semantikos has new data. Deleting current database.</string>

	<!-- ACTIONS -->
	<!-- submenus -->
	<string name="action_data">Data</string>
	<string name="action_database">Database</string>
	<string name="action_logging">Logging</string>
	<string name="action_app">App</string>
	<string name="action_about">About</string>
	<string name="action_theme">Theme …</string>
	<!-- settings and status -->
	<string name="action_settings">Settings</string>
	<string name="action_download_settings">Download settings</string>
	<string name="action_status">Status</string>
	<string name="action_drop">Drop</string>
	<string name="action_diagnostics">Diagnostics</string>
	<string name="action_resources_directory">Resources Directory</string>
	<string name="action_logs">Logs</string>
	<string name="action_logs_doc">Logs (Documents)</string>
	<string name="action_logs_exec">Logs (Execution)</string>
	<string name="action_clear_logs">Clear logs</string>
	<!-- setup -->
	<string name="action_setup">Set up</string>
	<!-- database info -->
	<string name="action_tables_and_indices">Tables and Indices</string>
	<!-- file info -->
	<string name="action_dirs">Directories</string>
	<string name="action_storage_dirs">Storage dirs</string>
	<string name="action_cache_dirs">Cache dirs</string>
	<string name="action_download_dirs">Download dirs</string>
	<string name="action_storage">Storage</string>
	<string name="action_md5">MD5</string>
	<!-- <string name="action_md5_of">MD5 of</string> -->
	<string name="action_md5_ask">MD5 &#8230;</string>
	<!-- general purpose -->
	<string name="action_run">Run</string>
	<string name="action_main">Main</string>
	<string name="action_quit">Quit</string>
	<string name="action_abort">Abort</string>
	<string name="action_dismiss">Dismiss</string>
	<string name="action_clear">Clear</string>
	<string name="action_send">Send</string>
	<string name="action_export">Export</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_copy">Copy</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_update">Update</string>
	<string name="action_capture">Capture</string>
	<string name="action_share_capture">Share capture</string>
	<string name="action_ok">OK</string>
	<!-- load -->
	<string name="action_assetload">Asset load</string>
	<string name="action_download">Download</string>
	<!-- history -->
	<string name="action_history">History</string>
	<string name="action_history_clear">Clear history</string>
	<string name="action_history_export">Export history</string>
	<string name="action_history_import">Import history</string>
	<!-- sql -->
	<string name="action_sql_clear">Clear SQL statements</string>
	<!-- misc -->
	<string name="action_help">Help</string>
	<string name="action_credits">Credits</string>
	<string name="action_version">Version</string>
	<string name="action_provider_info">Providers</string>
	<string name="action_appsettings">Application</string>
	<string name="action_theme_system">Theme follows system</string>
	<string name="action_theme_night">Night theme</string>
	<string name="action_theme_day">Day theme</string>
	<!-- description -->
	<string name="description_action_database">Get database</string>
	<string name="description_action_indexes">Make database indexes</string>
	<string name="description_action_send">Send to developer</string>
	<string name="description_info_database">Info about database</string>

	<!-- TITLES -->

	<!-- labels -->
	<string name="title_activity_main">Home</string>
	<string name="title_activity_browse">Browse</string>
	<string name="title_activity_searchtext">Text Search</string>
	<string name="title_activity_history">History</string>
	<string name="title_activity_web">Web</string>
	<string name="title_activity_status">Status</string>
	<string name="title_activity_setup">Set up</string>
	<string name="title_activity_setup_database">Set up database</string>
	<string name="title_activity_storage">Storage</string>
	<string name="title_activity_update">Update</string>
	<!-- <string name="title_activity_load">Load</string> -->
	<string name="title_activity_download">Download</string>
	<string name="title_activity_assetload">Asset load</string>
	<string name="title_activity_operation">Operation</string>
	<string name="title_activity_selector">Select</string>
	<string name="title_activity_browse2">Data</string>
	<string name="title_activity_table">Table</string>
	<string name="title_activity_diagnostics">Diagnostics</string>
	<string name="title_activity_logs">Logs</string>

	<string name="title_dialog_select_email">Choose an Email client</string>
	<string name="title_dialog_sql">SQL</string>
	<string name="title_dialog_info_download">SqlUNet download</string>
	<string name="title_dialog_assetload">Asset pack delivery</string>
	<string name="description_assetload">Load database from assets</string>

	<!-- send -->
	<string name="title_intentfilter_send_activity_browse">Semantikos</string>
	<string name="title_intentfilter_send_activity_searchtext">Semantikos (Text)</string>

	<!-- _status -->
	<string name="status_database">Database</string>
	<string name="status_indexes">Indexes</string>
	<string name="status_download_pending">pending</string>
	<string name="status_download_running">running</string>
	<string name="status_download_paused">paused</string>
	<string name="status_download_successful">successful</string>
	<string name="status_download_fail">failed</string>
	<string name="status_task_running">running</string>
	<string name="status_task_done">done</string>
	<string name="status_task_success">success</string>
	<string name="status_task_failed">failed</string>
	<string name="status_task_start_toast">Task started</string>
	<string name="status_task_done_toast">Task done</string>
	<string name="status_viewer_failed">No viewer</string>
	<string name="status_clipboard_copied">Copied to clipboard</string>
	<string name="status_diagnostics_running">Running diagnostics…</string>
	<string name="status_log_not_exists">Nothing has been logged.\nNo error was logged while querying content providers.</string>
	<string name="status_log_not_exists_doc">Nothing has been logged while making XML/HTML documents.</string>
	<string name="status_log_not_exists_exec">Nothing has been logged.\nNo error was logged while executing SQL statements.</string>
	<string name="status_state_unknown" />
	<string name="status_capture_no_view">No view to capture</string>

	<!-- error -->
	<string name="error_entry_not_found">Entry not found for %1$s</string>
	<string name="error_import">Error importing from</string>
	<string name="error_export">Error exporting to</string>
	<string name="error_invalid_table">Invalid table %1$s</string>

	<!-- pages -->
	<string name="title_page_setup_status">Status</string>
	<string name="title_page_setup_file">File</string>
	<string name="title_page_setup_database">Database</string>
	<string name="description_page_setup_status">Set up from Status</string>
	<string name="description_page_setup_file">Set up from File operations</string>
	<string name="description_page_setup_database">Set up from Database operations</string>

	<!-- dialog -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ask_drop">Do you wish to drop the database ?</string>
	<string name="fix_it">Fix it</string>
	<string name="description_cancel">Cancel operation</string>
	<string name="title_dismiss" />

	<!-- gloss -->
	<string name="gloss_load">You need to acquire database</string>
	<string name="gloss_assetload">Load database from the bundle associated with the application. This is the recommended way.</string>
	<string name="gloss_download">Download database from external site.</string>
	<string name="gloss_asset_delivery_message">Database is being delivered as an asset pack.\nThis may take some time.</string>

	<!-- misc -->
	<string name="hint_search">Search</string>
	<string name="hint_searchtext">Text search</string>
	<string name="hint_splash_browse">Exploring senses and semantic roles</string>
	<string name="hint_splash_searchtext">Text search</string>
	<string name="hint_sql">SQL statements stack</string>
	<string name="from_uri">from Uri</string>
	<string name="from_file">from file</string>

	<!-- result -->
	<string name="result_fail">Failed</string>
	<string name="result_success">Success</string>

	<!-- provider items -->
	<string name="providers">content providers</string>
	<string name="provider_authority">authority</string>
	<string name="suggestions">suggestions</string>
	<string name="suggestion_provider_pack">package</string>
	<string name="suggestion_provider_authority">authority</string>
	<string name="suggestion_provider_path">path</string>

	<!-- download items -->
	<string name="download_source">source</string>
	<string name="download_up">available source</string>
	<string name="download_newer">source database is possibly newer</string>
	<string name="download_uptodate">current database is up-to-date</string>
	<string name="download_down">current database</string>
	<string name="download_dest">destination</string>
	<string name="md5_downloaded">Downloaded</string>
	<string name="md5_computed">Computed</string>
	<string name="md5_compared">Compared</string>
	<string name="size_expected">Expected size</string>
	<string name="size_current">Current size</string>
	<string name="total">total</string>
	<string name="text_search">text search</string>

	<!-- import/export -->
	<string name="title_history_import">Imported from</string>
	<string name="title_history_export">Exported to</string>
	<string name="title_history_deleted">History deleted</string>
	<string name="title_add_history">Add history</string>
	<string name="title_sql_howto">Long-press to select and copy statement</string>

	<!-- rows -->
	<string name="description_row">row</string>
	<string name="description_suggested">suggested</string>

	<!-- columns -->
	<string name="description_column_id">id</string>
	<string name="description_column_major">major</string>
	<string name="description_column_other">other</string>
	<string name="description_column_statement">statement</string>
	<string name="description_column_name">name</string>
	<string name="description_column_version">version</string>
	<string name="description_column_provider">provider</string>
	<string name="description_column_url">url</string>
	<string name="description_column_reference">reference</string>

	<!-- summaries -->
	<string name="pref_header_summary_general">General preferences (views, sql, …)</string>
	<string name="pref_header_summary_database">Database info</string>
	<string name="pref_header_summary_assets">Assets preferences</string>
	<string name="pref_header_summary_download">Download preferences</string>
	<string name="pref_header_summary_filter">Dataset preferences</string>
	<string name="pref_header_summary_tree">Tree rendering preferences</string>
	<string name="pref_header_summary_speak">Speak preferences</string>
	<string name="pref_header_summary_wordnet">Wordnet preferences</string>

</resources>