<!--
  ~ Copyright (c) 2023. Bernard Bou
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_clear_settings"
		android:title="@string/title_reset_settings"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_diagnostics"
		android:title="@string/action_diagnostics"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_tables_and_indices"
		android:title="@string/action_tables_and_indices"
		app:showAsAction="never" />
	<item
		android:id="@+id/action_logging"
		android:title="@string/action_logging"
		app:showAsAction="never">
		<menu>
			<item
				android:id="@+id/action_logs"
				android:title="@string/action_logs"
				app:showAsAction="never" />
			<item
				android:id="@+id/action_logs_doc"
				android:title="@string/action_logs_doc"
				app:showAsAction="never" />
			<item
				android:id="@+id/action_logs_exec"
				android:title="@string/action_logs_exec"
				app:showAsAction="never" />
			<item
				android:id="@+id/action_clear_logs"
				android:title="@string/action_clear_logs"
				app:showAsAction="never" />
		</menu>
	</item>
</menu>