<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022. Bernard Bou
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	<item
		android:id="@+id/action_copy"
		android:title="@string/action_copy"
		app:showAsAction="ifRoom"
		tools:ignore="AppCompatResource" />
	<item
		android:id="@+id/action_dirs"
		android:title="@string/action_dirs"
		app:showAsAction="never"
		tools:ignore="AppCompatResource" />
	<item
		android:id="@+id/action_storage_dirs"
		android:title="@string/action_storage_dirs"
		app:showAsAction="never"
		tools:ignore="AppCompatResource" />
	<item
		android:id="@+id/action_cache_dirs"
		android:title="@string/action_cache_dirs"
		app:showAsAction="never"
		tools:ignore="AppCompatResource" />
	<item
		android:id="@+id/action_download_dirs"
		android:title="@string/action_download_dirs"
		app:showAsAction="never"
		tools:ignore="AppCompatResource" />
	<!--
	<item
		android:id="@+id/action_refresh"
		android:title="@string/action_refresh"
		app:showAsAction="never"
		tools:ignore="AppCompatResource" />
	-->
</menu>