<!--
  ~ Copyright (c) 2023. Bernard Bou
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="16dp"
		android:paddingTop="16dp"
		android:paddingRight="16dp"
		android:paddingBottom="16dp"
		android:weightSum="1">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:contentDescription="@string/about_sqlunet_label"
			android:src="@mipmap/ic_launcher" />

		<TextView
			style="@android:style/TextAppearance.Large.Inverse"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="?attr/colorSecondary"
			android:text="@string/about_sqlunet_label"
			android:textColor="?attr/colorOnSecondary"
			android:textStyle="bold" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center"
			android:text="@string/semantikos_greek"
			android:textStyle="italic" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center"
			android:text="@string/semantikos_latin"
			android:textStyle="italic" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="20dp"
			android:layout_marginRight="25dp"
			android:text="@string/gloss_load" />

		<TextView
			style="@android:style/TextAppearance.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="20dp"
			android:gravity="center_horizontal"
			android:text="@string/action_assetload" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/assetload"
			style="@style/ActionButton"
			android:contentDescription="@string/description_assetload"
			app:icon="@drawable/bn_assetload" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="0dp"
			android:layout_marginRight="25dp"
			android:gravity="center_horizontal"
			android:text="@string/gloss_assetload" />

		<TextView
			style="@android:style/TextAppearance.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="20dp"
			android:gravity="center_horizontal"
			android:text="@string/action_download" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/download"
			style="@style/ActionButton"
			android:contentDescription="@string/description_download_datapack"
			app:icon="@drawable/bn_download" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="0dp"
			android:layout_marginRight="25dp"
			android:text="@string/gloss_download" />

		<Button
			android:id="@+id/cancelButton"
			style="@style/Widget.Material3.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="25dp"
			android:contentDescription="@string/description_cancel"
			android:text="@string/action_cancel"
			android:visibility="visible" />

	</LinearLayout>
</ScrollView>
