<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. Bernard Bou <1313ou@gmail.com>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/ListItem"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:ignore="UnusedResources">

	<TextView
		android:id="@+id/item0"
		style="@style/ListItemColumn.Minor"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".1"
		android:contentDescription="@string/description_column_id" />

	<TextView
		android:id="@+id/item1"
		style="@style/ListItemColumn.Major"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".65"
		android:contentDescription="@string/description_column_major" />

	<TextView
		android:id="@+id/item2"
		style="@style/ListItemColumn.Minor"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".25"
		android:contentDescription="@string/description_column_other" />

</LinearLayout>