<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. Bernard Bou <1313ou@gmail.com>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/ListItem"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/item0"
		style="@style/ListItemColumn.Minor"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".1"
		android:contentDescription="@string/description_column_id"
		tools:ignore="SelectableText" />

	<TextView
		android:id="@+id/item1"
		style="@style/ListItemColumn.Major"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".2"
		android:contentDescription="@string/description_column_major"
		tools:ignore="SelectableText" />

	<TextView
		android:id="@+id/item2"
		style="@style/ListItemColumn"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight=".7"
		android:contentDescription="@string/description_column_other"
		tools:ignore="SelectableText" />

</LinearLayout>