<!--
  ~ Copyright (c) 2019. Bernard Bou <1313ou@gmail.com>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="16dp"
	android:paddingTop="16dp"
	android:paddingRight="16dp"
	android:paddingBottom="16dp"
	android:weightSum="1"
	tools:context="org.sqlunet.browser.config.AssetLoadFragment">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:contentDescription="@string/about_sqlunet_label"
		android:src="@mipmap/ic_launcher" />

	<TextView
		style="@android:style/TextAppearance.Large.Inverse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:background="?attr/colorSecondary"
		android:textColor="?attr/colorOnSecondary"
		android:text="@string/about_sqlunet_label"
		android:textStyle="bold" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:text="@string/semantikos_greek"
		android:textStyle="italic" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:text="@string/semantikos_latin"
		android:textStyle="italic" />

	<View
		android:layout_width="wrap_content"
		android:layout_height="10dp" />

	<TextView
		android:id="@+id/title"
		style="@android:style/TextAppearance.Medium"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center" />

	<TextView
		android:id="@+id/message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="25dp"
		android:layout_marginTop="16dp"
		android:layout_marginRight="25dp"
		android:gravity="center_horizontal"/>

	<ProgressBar
		android:id="@+id/progressBar"
		style="@style/Widget.AppCompat.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="25dp"
		android:layout_marginTop="25dp"
		android:layout_marginRight="25dp" />

	<TextView
		android:id="@+id/progressProgress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="25dp"
		android:layout_marginTop="8dp"
		android:layout_marginRight="25dp" />

	<TextView
		android:id="@+id/status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="25dp"
		android:layout_marginTop="16dp"
		android:layout_marginRight="25dp" />

	<Button
		android:id="@+id/cancelButton"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="16dp"
		android:text="@string/action_cancel"
		android:visibility="gone" />

</LinearLayout>
